# whisper-ui

./: .gitignore  Cargo.toml  Info.plist  README.md  build.rs
src/: app.rs  config.rs  document.rs  main.rs  workspace.rs
src/app/: mod.rs  model_status.rs  transcription_result.rs  worker.rs
src/audio/: capture.rs
src/inference/: mod.rs
src/inference/backend/: mod.rs  model_manager.rs  whisper_backend.rs
src/ui/: controls.rs  editor.rs  mod.rs  settings.rs  sidebar.rs
