[package]
name = "whisper-app"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.14", features = ["debug", "wgpu", "tokio"] }
whisper-rs = "0.16"
cpal = "0.15"
tokio = { version = "1", features = ["full"] }

reqwest = { version = "0.12", features = ["stream", "native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
thiserror = "2"
crossbeam-queue = "0.3"
futures-lite = "2"
crossbeam-channel = "0.3"

[dev-dependencies]
hound = "3.5"

[features]
default = []
cuda = ["whisper-rs/cuda"]
vulkan = ["whisper-rs/vulkan"]
metal = ["whisper-rs/metal"]
